--- a/styles.css
+++ b/styles.css
@@ -492,3 +492,31 @@ footer a{
     margin-top: auto;
     margin-bottom: auto;
 }
+
+.footer-redes a{
+    margin-right: 10px;
+    text-decoration: none;
+}
+
+/* SECCION EXITO MAIL */
+.post-mail{
+    height: 94vh;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    background-color: black;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.post-mail img{
+    height: 200px;
+    width: 200px;
+}
+
+.post-mail a{
+    color: var(--celeste);
+    font-weight: bold;
+    text-decoration: none;
+}
