--- a/styles.css
+++ b/styles.css
@@ -403,10 +403,10 @@ body{
 @media (max-width: 768px) {
     .proceso-creacion{
         display: flex;
-        height: 700px;
+        height: 400px;
     }
     .proceso-creacion__opacador{
-        height: 700px;
+        height: 400px;
     }
     .etapa{
         height: 100px;
@@ -471,6 +471,65 @@ body{
     color: black;
 }
 
+/* PROYECTOS */
+.proyectos{
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    color: var(--celeste);
+}
+
+.proyecto{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    margin-bottom: 100px;
+    text-align: center;
+    text-decoration: none;
+}
+
+.proyecto img{
+    width: 300px;
+    height: 300px;
+}
+
+.texto-proyecto{
+    display: flex;
+    flex-direction: column;
+    color: var(--celeste);
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.texto-proyecto_tecnologias{
+    display: flex;
+    flex-direction: row;
+    margin-left: auto;
+    margin-right: auto;
+    color: var(--gris-oscuro);
+}
+.texto-proyecto_tecnologias p{
+    padding: 5px;
+    border-radius: 5px;
+    margin-left: 5px;
+    border: 1px solid var(--gris-oscuro);
+}
+
+@media (max-width: 767px) { 
+    .proyecto{
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+        border-radius: 5px;
+        border: 1px solid var(--gris-oscuro);
+    }
+    .proyecto img{
+        height: 150px;
+        width: 150px;
+    }
+}
 /* FOOTER */
 footer{
     display: flex;
