--- a/styles.css
+++ b/styles.css
@@ -491,8 +491,8 @@ body{
 }
 
 .proyecto img{
-    width: 300px;
-    height: 300px;
+    max-width: 300px;
+    max-height: 300px;
 }
 
 .texto-proyecto{
